Fix T55380: Crash when getting out of EditMode in some cases

Derived meshes are to be dead, so soon this code will be removed as well.